Prevent recent files from overflowing. Fixes #387

--- a/styles/lists.less
+++ b/styles/lists.less
@@ -46,7 +46,7 @@
     li.list-nested-item.selected > .list-item {
         .text(selected);
 
-        &::before {
+        &:not(.header)::before {
             background: fade(@text-color, 5%);
         }
 
